<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings_header">Toppings</string>
    <string name="cream_checkbox">Whipped Cream</string>
    <string name="chocolate_checkbox">Chocolate</string>
    <string name="user_name_hint">Name</string>
    <string name="quantity_header">Quantity</string>
    <string name="order_header">Order</string>
    <string name="decrement_btn_text">-</string>
    <string name="order_subject">JutsJava order for </string>
</resources>
